[metadata]
name = dtfabric
version = 20241013
description = Data type fabric (dtfabric)
long_description = dtFabric, or data type fabric, is a project to manage data types and structures, as used in the libyal projects.
long_description_content_type = text/plain
url = https://github.com/libyal/dtfabric
maintainer = Joachim Metz
maintainer_email = joachim.metz@gmail.com
license = Apache License, Version 2.0
license_files =
  ACKNOWLEDGEMENTS
  AUTHORS
  LICENSE
  README
classifiers =
  Development Status :: 3 - Alpha
  Programming Language :: Python

[options]
install_requires = file:requirements.txt
package_dir =
  dtfabric = dtfabric
packages = find:
python_requires = >=3.8
scripts =
  scripts/validate-definitions.py

[options.packages.find]
exclude =
  docs
  tests
  tests.*
  utils
where = .

[bdist_wheel]
universal = 1
